--- a/autoclone/autoclone-macro/Cargo.toml
+++ b/autoclone/autoclone-macro/Cargo.toml
@@ -16,5 +16,8 @@ proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full", "visit-mut"] }
 
+[dev-dependencies]
+clone-macro = "*"
+
 [lints]
 workspace = true
