--- a/terrazzo/Cargo.toml
+++ b/terrazzo/Cargo.toml
@@ -53,7 +53,9 @@ wasm-bindgen = { workspace = true, optional = true }
 wasm-bindgen-futures = { workspace = true, optional = true }
 wasm-streams = { workspace = true, optional = true }
 web-sys = { workspace = true, optional = true, features = [
+    "DataTransfer",
     "Document",
+    "DragEvent",
     "Element",
     "FocusEvent",
     'Headers',
