Group dependabot updates (#10)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,11 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    labels:
+      - "Dependabot"
+    groups:
+       minor-updates:
+          applies-to: version-updates
+          update-types:
+            - "minor"
+            - "patch"
