Templates can supply the tag name in the #[template(tag = div)] attribute. (#13)

--- a/framework/common/Cargo.toml
+++ b/framework/common/Cargo.toml
@@ -61,5 +61,12 @@ output_file = "./target/css/common.scss"
 folders = ["./src/"]
 extensions = [".scss", ".css"]
 
-[lints]
-workspace = true
+[lints.rust]
+unused = "deny"
+warnings = "deny"
+
+[lints.clippy]
+enum_variant_names = "allow"
+needless_return = "allow"
+too_many_arguments = "allow"
+type_complexity = "allow"
