Fix CI actions (#24)

--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -2,6 +2,12 @@ name: Test
 runs:
   using: "composite"
   steps:
+    # Avoids race with two build scripts installing wasm-bindgen-cli at the same time.
+    - name: First compile
+      run: |
+        cargo build --bin game --features server
+        cargo build --bin web-terminal --features server
+      shell: bash
     - name: Test
       run: cargo test
       shell: bash
