--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
-authors = ["Richard <richard.pavy@gmail.com>"]
+authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2021"
 
 [profile.dev.package."*"]
