--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["game", "pty", "web-terminal"]
+members = ["game", "pty", "terrazzo-terminal"]
 resolver = "2"
 
 [workspace.package]
@@ -54,7 +54,7 @@ stylance = { version = "0.5.3" }
 syn = { version = "2.0.93" }
 terrazzo = { version = "0.1.3", default-features = false }
 terrazzo-build = { version = "0.1.3" }
-thiserror = { version = "2.0.7" }
+thiserror = { version = "2.0.9" }
 tokio = { version = "1.42.0" }
 tokio-util = { version = "0.7.13" }
 tower-http = { version = "0.6.2" }
