--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -3,8 +3,8 @@ runs:
   using: "composite"
 
   steps:
-    - name: Stylance web-terminal
-      run: cd web-terminal && stylance .
+    - name: Stylance terrazzo-terminal
+      run: cd terrazzo-terminal && stylance .
       shell: bash
 
     - name: Stylance game
@@ -17,8 +17,8 @@ runs:
         cargo clippy --features client,max_level_info
         cargo clippy --bin game --features server,max_level_debug
         cargo clippy --bin game --features server,max_level_info
-        cargo clippy --bin web-terminal --features server,max_level_debug
-        cargo clippy --bin web-terminal --features server,max_level_info
+        cargo clippy --bin terrazzo-terminal --features server,max_level_debug
+        cargo clippy --bin terrazzo-terminal --features server,max_level_info
       shell: bash
 
     - name: Rustfmt
