--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -24,3 +24,7 @@ runs:
     - name: Rustfmt
       run: cargo fmt
       shell: bash
+
+    - name: Documentation
+      run: cargo doc --all-features
+      shell: bash
