--- a/pty/Cargo.toml
+++ b/pty/Cargo.toml
@@ -3,6 +3,10 @@ name = "terrazzo-pty"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
+description = "Utility to run commands in a PTY"
+readme = "README.md"
+categories = ["command-line-utilities"]
+keywords = ["terrazzo", "terminal", "pty", "execute", "process"]
 
 [lib]
 
