--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -21,10 +21,12 @@ path = "src/server.rs"
 required-features = ["server"]
 
 [dependencies]
+clap = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
 futures = { workspace = true }
 libc = { workspace = true, optional = true }
 nameth = { workspace = true }
+nix = { workspace = true, optional = true, features = ["signal"] }
 pin-project = { workspace = true }
 scopeguard = { workspace = true }
 serde = { workspace = true }
@@ -82,8 +84,10 @@ client = [
     "terrazzo/client",
 ]
 server = [
+    "dep:clap",
     "dep:dashmap",
     "dep:libc",
+    "dep:nix",
     "dep:terrazzo-pty",
     "dep:tokio",
     "dep:tower-http",
