--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ terrazzo-pty = { version = "0.1.1", path = "pty" }
 
 autoclone = { version = "0.1.3" }
 axum = { version = "0.7.9" }
+clap = { version = "4.5.23", features = ["derive"] }
 darling = { version = "0.20.10" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
@@ -41,6 +42,7 @@ libc = { version = "0.2.169" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.3" }
+nix = { version = "0.29.0" }
 pin-project = { version = "1.1.7" }
 prettyplease = { version = "0.2.25" }
 proc-macro2 = { version = "1.0.92" }
