--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["game", "pty", "terminal"]
 resolver = "2"
 
 [workspace.package]
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2021"
 repository = "https://github.com/Terrazzo-Web/Terminal"
@@ -27,10 +27,11 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-terrazzo-pty = { version = "0.1.1", path = "pty" }
+terrazzo-pty = { version = "0.1.2", path = "pty" }
 
 autoclone = { version = "0.1.3" }
 axum = { version = "0.7.9" }
+clap = { version = "4.5.23", features = ["derive"] }
 darling = { version = "0.20.10" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
@@ -41,6 +42,7 @@ libc = { version = "0.2.169" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.3" }
+nix = { version = "0.29.0" }
 pin-project = { version = "1.1.7" }
 prettyplease = { version = "0.2.25" }
 proc-macro2 = { version = "1.0.92" }
