--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.5" }
 nix = { version = "0.29.0" }
+openssl = { version = "0.10.71" }
 pin-project = { version = "1.1.9" }
 prettyplease = { version = "0.2.29" }
 proc-macro2 = { version = "1.0.93" }
@@ -67,7 +68,10 @@ tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-uuid = { version = "1.14.0" }
+trz-gateway-client = { version = "0.1.5" }
+trz-gateway-common = { version = "0.1.5" }
+trz-gateway-server = { version = "0.1.5" }
+uuid = { version = "1.15.1" }
 wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
 wasm-bindgen-test = { version = "0.3.50" }
@@ -84,3 +88,8 @@ enum_variant_names = "allow"
 needless_return = "allow"
 too_many_arguments = "allow"
 type_complexity = "allow"
+
+[patch.crates-io]
+trz-gateway-client = { path = "/home/richard/Documents/Github/Terrazzo/remote/client" }
+trz-gateway-common = { path = "/home/richard/Documents/Github/Terrazzo/remote/common" }
+trz-gateway-server = { path = "/home/richard/Documents/Github/Terrazzo/remote/server" }
