--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,6 @@ too_many_arguments = "allow"
 type_complexity = "allow"
 
 [patch.crates-io]
-trz-gateway-client = { path = "/home/richard/Documents/Github/Terrazzo/remote/client" }
-trz-gateway-common = { path = "/home/richard/Documents/Github/Terrazzo/remote/common" }
-trz-gateway-server = { path = "/home/richard/Documents/Github/Terrazzo/remote/server" }
+trz-gateway-client = { path = "../Terrazzo/remote/client" }
+trz-gateway-common = { path = "../Terrazzo/remote/common" }
+trz-gateway-server = { path = "../Terrazzo/remote/server" }
