--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/check
   test:
     runs-on: ${{ matrix.os }}
@@ -24,6 +26,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/test
   build:
     runs-on: ${{ matrix.os }}
@@ -33,10 +37,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/build
   publish-dry-run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/publish-dry-run
