--- a/.github/workflows/merge-validation.yml
+++ b/.github/workflows/merge-validation.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/check
   test:
     runs-on: ubuntu-latest
@@ -18,6 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/test
   build:
     runs-on: ubuntu-latest
@@ -25,4 +29,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/build
