Upgrade to Terrazzo Gateway (#17)
* tasks

* todo

* {*file}

* Upgrade to Terrazzo "0.1.5"

* private_root_ca

* ClubMed

* rustfmt

* import

* deps

* memoize

* Revert "memoize"

This reverts commit 01c077dbe7a50461efadcc47ea2572ab19086ead.

* const HOST: &str = "localhost";

* cargo

* crypto_provider

* TODO

* Upgrade to Terrazzo 0.1.6

* if env::var("DOCS_RS") == Err(env::VarError::NotPresent)

* + Github token

* + Github token

* Revert "+ Github token"

This reverts commit 59af5ef683dcbbe0ce487c12eb9e15a0ea90bd8b.

* +version

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,4 +1,8 @@
 name: Set up
+inputs:
+  github-token:
+    description: "GitHub token for authentication"
+    required: true
 runs:
   using: "composite"
   steps:
@@ -25,4 +29,9 @@ runs:
 
     - name: Install stylance
       shell: bash
-      run: cargo install stylance-cli --version 0.5.4
+      run: cargo install stylance-cli --version 0.5.5
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        repo-token: ${{ inputs.github-token }}
