--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["game", "pty", "terminal"]
 resolver = "2"
 
 [workspace.package]
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2024"
 repository = "https://github.com/Terrazzo-Web/Terminal"
@@ -27,47 +27,51 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-terrazzo-pty = { version = "0.1.4", path = "pty" }
+terrazzo-pty = { version = "0.1.5", path = "pty" }
 
-async-trait = { version = "0.1.86" }
-autoclone = { version = "0.1.5" }
+async-trait = { version = "0.1.88" }
+autoclone = { version = "0.1.6" }
 axum = { version = "0.8.1" }
-clap = { version = "4.5.31", features = ["derive"] }
+clap = { version = "4.5.32", features = ["derive"] }
 darling = { version = "0.20.10" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
-http = { version = "1.2.0" }
+http = { version = "1.3.1" }
 include_directory = { version = "0.1.1" }
-libc = { version = "0.2.170" }
+libc = { version = "0.2.171" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
-nameth = { version = "0.1.5" }
+nameth = { version = "0.1.6" }
 nix = { version = "0.29.0" }
+openssl = { version = "0.10.71" }
 pin-project = { version = "1.1.10" }
-prettyplease = { version = "0.2.30" }
+prettyplease = { version = "0.2.31" }
 proc-macro2 = { version = "1.0.94" }
-quote = { version = "1.0.39" }
+quote = { version = "1.0.40" }
 reqwest-wasm = { version = "0.11.16" }
 rsass-macros = { version = "0.29.0" }
-rustix = { version = "0.38.44" }
+rustix = { version = "1.0.2" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
 stylance = { version = "0.5.5" }
 syn = { version = "2.0.100" }
-terrazzo = { version = "0.1.5", default-features = false }
-terrazzo-build = { version = "0.1.4" }
+terrazzo = { version = "0.1.6", default-features = false }
+terrazzo-build = { version = "0.1.6" }
 thiserror = { version = "2.0.12" }
-tokio = { version = "1.44.0" }
-tokio-util = { version = "0.7.13" }
+tokio = { version = "1.44.1" }
+tokio-util = { version = "0.7.14" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-uuid = { version = "1.15.1" }
+trz-gateway-client = { version = "0.1.6" }
+trz-gateway-common = { version = "0.1.6" }
+trz-gateway-server = { version = "0.1.6" }
+uuid = { version = "1.16.0" }
 wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
 wasm-bindgen-test = { version = "0.3.50" }
