--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,3 +88,8 @@ enum_variant_names = "allow"
 needless_return = "allow"
 too_many_arguments = "allow"
 type_complexity = "allow"
+
+[patch.crates-io]
+trz-gateway-client = { path = "../Terrazzo/remote/client" }
+trz-gateway-common = { path = "../Terrazzo/remote/common" }
+trz-gateway-server = { path = "../Terrazzo/remote/server" }
