--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ too_many_arguments = "allow"
 type_complexity = "allow"
 
 [patch.crates-io]
+nameth = { path = "../Terrazzo/utils/nameth/nameth" }
 terrazzo = { path = "../Terrazzo/framework/terrazzo" }
 trz-gateway-client = { path = "../Terrazzo/remote/client" }
 trz-gateway-common = { path = "../Terrazzo/remote/common" }
