--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -38,6 +38,7 @@ terrazzo = { workspace = true }
 terrazzo-pty = { workspace = true, optional = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, optional = true, features = ["full"] }
+tokio-util = { workspace = true, optional = true, features = ["io"] }
 tonic = { workspace = true, optional = true }
 tower-http = { workspace = true, optional = true, features = [
     "fs",
@@ -92,9 +93,10 @@ server = [
     "dep:dashmap",
     "dep:nix",
     "dep:openssl",
-    "dep:prost",
     "dep:prost-types",
+    "dep:prost",
     "dep:terrazzo-pty",
+    "dep:tokio-util",
     "dep:tokio",
     "dep:tonic",
     "dep:tower-http",
