--- a/pty/Cargo.toml
+++ b/pty/Cargo.toml
@@ -30,5 +30,9 @@ tokio = { workspace = true, features = [
 tokio-util = { workspace = true, features = ["io"] }
 tracing = { workspace = true }
 
+[dev-dependencies]
+tokio-stream = { workspace = true }
+trz-gateway-common = { workspace = true }
+
 [lints]
 workspace = true
