--- a/pty/Cargo.toml
+++ b/pty/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["terrazzo", "terminal", "pty", "execute", "process"]
 [lib]
 
 [dependencies]
+bytes = { workspace = true }
 futures = { workspace = true }
 libc = { workspace = true }
 nameth = { workspace = true }
