--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ terrazzo-pty = { version = "0.1.7", path = "pty" }
 
 async-trait = { version = "0.1.88" }
 autoclone = { version = "0.1.7" }
-axum = { version = "0.8.3" }
+axum = { version = "0.8.4" }
 bytes = { version = "1.10.1" }
 clap = { version = "4.5.37", features = ["derive"] }
 darling = { version = "0.20.11" }
@@ -44,7 +44,7 @@ libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.7" }
-nix = { version = "0.29.0" }
+nix = { version = "0.30.0" }
 openssl = { version = "0.10.72" }
 pin-project = { version = "1.1.10" }
 prettyplease = { version = "0.2.32" }
@@ -52,12 +52,12 @@ proc-macro2 = { version = "1.0.95" }
 quote = { version = "1.0.40" }
 reqwest-wasm = { version = "0.11.16" }
 rsass-macros = { version = "0.29.0" }
-rustix = { version = "1.0.5" }
+rustix = { version = "1.0.7" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
-stylance = { version = "0.5.5" }
+stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
 terrazzo = { version = "0.1.7", default-features = false }
 terrazzo-build = { version = "0.1.7" }
@@ -68,6 +68,7 @@ tonic = { version = "0.13.0" }
 tonic-build = { version = "0.13.0" }
 prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
+tokio-stream = { version = "0.1.17" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
@@ -93,3 +94,12 @@ enum_variant_names = "allow"
 needless_return = "allow"
 too_many_arguments = "allow"
 type_complexity = "allow"
+
+# <TODO>: remove
+[patch.crates-io]
+nameth = { path = "../Terrazzo/utils/nameth/nameth" }
+terrazzo = { path = "../Terrazzo/framework/terrazzo" }
+trz-gateway-client = { path = "../Terrazzo/remote/client" }
+trz-gateway-common = { path = "../Terrazzo/remote/common" }
+trz-gateway-server = { path = "../Terrazzo/remote/server" }
+# </TODO>
