--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ openssl = { version = "0.10.72" }
 pin-project = { version = "1.1.10" }
 prettyplease = { version = "0.2.32" }
 proc-macro2 = { version = "1.0.95" }
+prost = { version = "0.13.5" }
+prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 reqwest-wasm = { version = "0.11.16" }
 rsass-macros = { version = "0.29.0" }
@@ -63,12 +65,11 @@ terrazzo = { version = "0.1.8", default-features = false }
 terrazzo-build = { version = "0.1.8" }
 thiserror = { version = "2.0.12" }
 tokio = { version = "1.44.2" }
+tokio-stream = { version = "0.1.17" }
 tokio-util = { version = "0.7.15" }
 tonic = { version = "0.13.1" }
 tonic-build = { version = "0.13.1" }
-prost = { version = "0.13.5" }
-prost-types = { version = "0.13.5" }
-tokio-stream = { version = "0.1.17" }
+tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
