--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
 terrazzo = { version = "0.1.8", default-features = false }
