--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -33,6 +33,7 @@ prost-types = { workspace = true, optional = true }
 scopeguard = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+static_assertions = { workspace = true, optional = true }
 stylance = { workspace = true, optional = true }
 terrazzo = { workspace = true }
 terrazzo-pty = { workspace = true, optional = true }
@@ -94,6 +95,7 @@ server = [
     "dep:openssl",
     "dep:prost-types",
     "dep:prost",
+    "dep:static_assertions",
     "dep:terrazzo-pty",
     "dep:tokio",
     "dep:tonic",
@@ -112,6 +114,7 @@ max_level_info = [
     "concise_traces",
 ]
 concise_traces = ["terrazzo/concise_traces"]
+no_wasm_build = []
 
 [package.metadata.stylance]
 output_file = "./target/css/terrazzo-terminal.scss"
