--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,13 +33,14 @@ async-trait = { version = "0.1.88" }
 autoclone = { version = "0.1.8" }
 axum = { version = "0.8.4" }
 bytes = { version = "1.10.1" }
-clap = { version = "4.5.37", features = ["derive"] }
+clap = { version = "4.5.38", features = ["derive"] }
 darling = { version = "0.20.11" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
 include_directory = { version = "0.1.1" }
+jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
@@ -71,7 +72,7 @@ tokio-util = { version = "0.7.15" }
 tonic = { version = "0.13.1" }
 tonic-build = { version = "0.13.1" }
 tower = { version = "0.5.2" }
-tower-http = { version = "0.6.2" }
+tower-http = { version = "0.6.4" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.19" }
