--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -24,6 +24,7 @@ required-features = ["server"]
 clap = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
 futures = { workspace = true }
+jsonwebtoken = { workspace = true, optional = true }
 nameth = { workspace = true }
 nix = { workspace = true, optional = true, features = ["signal"] }
 openssl = { workspace = true, optional = true }
@@ -41,6 +42,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, optional = true, features = ["full"] }
 tonic = { workspace = true, optional = true }
 tower-http = { workspace = true, optional = true, features = [
+    "auth",
     "fs",
     "sensitive-headers",
     "trace",
@@ -89,6 +91,7 @@ client = [
 server = [
     "dep:clap",
     "dep:dashmap",
+    "dep:jsonwebtoken",
     "dep:nix",
     "dep:openssl",
     "dep:prost-types",
