--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ terrazzo-pty = { version = "0.1.8", path = "pty" }
 async-trait = { version = "0.1.88" }
 autoclone = { version = "0.1.8" }
 axum = { version = "0.8.4" }
+axum-extra = { version = "0.10.1" }
 bytes = { version = "1.10.1" }
 clap = { version = "4.5.38", features = ["derive"] }
 darling = { version = "0.20.11" }
