--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ async-trait = { version = "0.1.88" }
 autoclone = { version = "0.1.8" }
 axum = { version = "0.8.4" }
 axum-extra = { version = "0.10.1" }
+base64 = { version = "0.22.1" }
 bytes = { version = "1.10.1" }
 clap = { version = "4.5.38", features = ["derive"] }
 darling = { version = "0.20.11" }
@@ -56,12 +57,14 @@ prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 reqwest-wasm = { version = "0.11.16" }
+rpassword = { version = "7.4.0" }
 rsass-macros = { version = "0.29.0" }
 rustix = { version = "1.0.7" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+sha2 = { version = "0.10.9" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
