--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -23,6 +23,7 @@ required-features = ["server"]
 [dependencies]
 axum-extra = { workspace = true, optional = true, features = ["cookie"] }
 clap = { workspace = true, optional = true }
+base64 = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
 futures = { workspace = true }
 jsonwebtoken = { workspace = true, optional = true }
@@ -33,9 +34,11 @@ pbkdf2 = { workspace = true, optional = true }
 pin-project = { workspace = true }
 prost = { workspace = true, optional = true }
 prost-types = { workspace = true, optional = true }
+rpassword = { workspace = true, optional = true }
 scopeguard = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+sha2 = { workspace = true, optional = true }
 static_assertions = { workspace = true, optional = true }
 stylance = { workspace = true, optional = true }
 terrazzo = { workspace = true }
@@ -93,6 +96,7 @@ client = [
 ]
 server = [
     "dep:axum-extra",
+    "dep:base64",
     "dep:clap",
     "dep:dashmap",
     "dep:jsonwebtoken",
@@ -101,6 +105,8 @@ server = [
     "dep:pbkdf2",
     "dep:prost-types",
     "dep:prost",
+    "dep:rpassword",
+    "dep:sha2",
     "dep:static_assertions",
     "dep:terrazzo-pty",
     "dep:tokio",
