--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ terrazzo-pty = { version = "0.1.8", path = "pty" }
 async-trait = { version = "0.1.88" }
 autoclone = { version = "0.1.8" }
 axum = { version = "0.8.4" }
+axum-extra = { version = "0.10.1" }
+base64 = { version = "0.22.1" }
 bytes = { version = "1.10.1" }
 clap = { version = "4.5.38", features = ["derive"] }
 darling = { version = "0.20.11" }
@@ -40,12 +42,14 @@ deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
 include_directory = { version = "0.1.1" }
+jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.8" }
 nix = { version = "0.30.1" }
 openssl = { version = "0.10.72" }
+pbkdf2 = { version = "0.12.2" }
 pin-project = { version = "1.1.10" }
 prettyplease = { version = "0.2.32" }
 proc-macro2 = { version = "1.0.95" }
@@ -53,12 +57,14 @@ prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 reqwest-wasm = { version = "0.11.16" }
+rpassword = { version = "7.4.0" }
 rsass-macros = { version = "0.29.0" }
 rustix = { version = "1.0.7" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+sha2 = { version = "0.10.9" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
@@ -68,6 +74,7 @@ thiserror = { version = "2.0.12" }
 tokio = { version = "1.44.2" }
 tokio-stream = { version = "0.1.17" }
 tokio-util = { version = "0.7.15" }
+toml = { version = "0.8.22" }
 tonic = { version = "0.13.1" }
 tonic-build = { version = "0.13.1" }
 tower = { version = "0.5.2" }
